# zapcard

./: .gitignore  COPYING  INSTALL  Makefile.am  README.md  configure.ac
contrib/: README.md  bitcoin-qt.pro  bitcoind.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  bitcoin-qt.desktop  bitcoin-qt.install  bitcoin-qt.lintian-overrides  bitcoin-qt.protocol  bitcoind.bash-completion  bitcoind.examples  bitcoind.install  bitcoind.lintian-overrides  bitcoind.manpages  changelog  control  copyright  rules  watch
contrib/devtools/: README.md  fix-copyright-headers.py  update-translations.py
contrib/gitian-descriptors/: README.md  deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-osx-bitcoin.yml  gitian-win.yml  qt-win.yml
contrib/gitian-downloader/: linux-download-config  win32-download-config
contrib/linearize/: example-linearize.cfg  linearize.py
contrib/macdeploy/: README.md  fancy.plist  macdeployqtplus
contrib/pyminer/: README.md  pyminer.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py
contrib/verifysfbinaries/: verify.sh
doc/: Doxyfile  README.md  README_windows.txt  assets-attribution.md  bootstrap.md  build-msw.md  build-osx.md  build-unix.md  coding.md  gitian-building.md  multiwallet-qt.md  release-notes.md  release-process.md  tor.md  translation_process.md  unit-tests.md
doc/release-notes/: release-notes-0.3.12.md  release-notes-0.3.13.md  release-notes-0.3.14.md  release-notes-0.3.15.md  release-notes-0.3.18.md  release-notes-0.3.20.2.md  release-notes-0.3.20.md  release-notes-0.3.21.md  release-notes-0.3.22.md  release-notes-0.3.23.md  release-notes-0.3.24.md  release-notes-0.4.0.md  release-notes-0.4.1.md  release-notes-0.4.3.md  release-notes-0.4.4.md  release-notes-0.4.6.md  release-notes-0.5.0.md  release-notes-0.5.1.md  release-notes-0.5.2.md  release-notes-0.5.3.md  release-notes-0.5.4.md  release-notes-0.5.5.md  release-notes-0.6.0.md  release-notes-0.6.2.md  release-notes-0.6.3.md  release-notes-0.7.0.md  release-notes-0.7.1.md  release-notes-0.7.2.md  release-notes-0.8.0.md  release-notes-0.8.1.md  release-notes-0.8.2.md  release-notes-0.8.3.md  release-notes-0.8.4.md  release-notes-0.8.5.md  release-notes-0.8.6.md  release-notes-0.9.0.md
qa/pull-tester/: build-tests.sh.in  pull-tester.py  pull-tester.sh  run-zapcardd-for-test.sh  run-zapcardd-for-test.sh.in
qa/rpc-tests/: README.md  conflictedbalance.sh  listtransactions.py  send.sh  skeleton.py  txnmall.sh  util.py  util.sh  wallet.sh  walletbackup.sh
share/: setup.nsi.in  ui.rc
share/certs/: BitcoinFoundation_Comodo_Cert.pem  PrivateKeyNotes.md
share/pixmaps/: bitcoin128.xpm  bitcoin16.xpm  bitcoin256.xpm  bitcoin32.xpm  bitcoin64.xpm
share/qt/: Info.plist.in  extract_strings_qt.py  make_windows_icon.sh
src/: Makefile.am  Makefile.include  alert.cpp  alert.h  allocators.cpp  allocators.h  base58.cpp  base58.h  bignum.h  bloom.cpp  bloom.h  chainparams.cpp  chainparams.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  core.cpp  core.h  crypter.cpp  crypter.h  db.cpp  db.h  hash.h  init.cpp  init.h  key.cpp  key.h  keystore.cpp  keystore.h  leveldbwrapper.cpp  leveldbwrapper.h  limitedmap.h  main.cpp  main.h  miner.cpp  (+47 more)
src/compat/: glibc_compat.cpp
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/m4/: bitcoin_qt.m4
src/qt/: Makefile.am  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  monitoreddatamapper.cpp  monitoreddatamapper.h  notificator.cpp  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentrequest.proto  paymentrequestplus.cpp  (+60 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: zapcard_ach.ts  zapcard_af_ZA.ts  zapcard_ar.ts  zapcard_be_BY.ts  zapcard_bg.ts  zapcard_bs.ts  zapcard_ca.ts  zapcard_ca@valencia.ts  zapcard_ca_ES.ts  zapcard_cmn.ts  zapcard_cs.ts  zapcard_cy.ts  zapcard_da.ts  zapcard_de.ts  zapcard_el_GR.ts  zapcard_en.ts  zapcard_eo.ts  zapcard_es.ts  zapcard_es_CL.ts  zapcard_es_DO.ts  zapcard_es_MX.ts  zapcard_es_UY.ts  zapcard_et.ts  zapcard_eu_ES.ts  zapcard_fa.ts  zapcard_fa_IR.ts  zapcard_fi.ts  zapcard_fr.ts  zapcard_fr_CA.ts  zapcard_gl.ts  zapcard_gu_IN.ts  zapcard_he.ts  zapcard_hi_IN.ts  zapcard_hr.ts  zapcard_hu.ts  zapcard_id_ID.ts  zapcard_it.ts  zapcard_ja.ts  zapcard_ka.ts  zapcard_kk_KZ.ts  (+31 more)
src/qt/res/: zapcard-qt-res.rc
src/qt/test/: Makefile.am  test_main.cpp  uritests.cpp
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile.am  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  canonical_tests.cpp  checkblock_tests.cpp  compress_tests.cpp  getarg_tests.cpp  hash_tests.cpp  hmac_tests.cpp  key_tests.cpp  main_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  serialize_tests.cpp  sighash_tests.cpp  sigopcount_tests.cpp  test_zapcard.cpp  transaction_tests.cpp  uint256_tests.cpp  util_tests.cpp  wallet_tests.cpp
(+6 files in other folders)
